<?xml version="1.0"?>
<package format="2">
  <name>autohyu_msgs</name>
  <version>0.0.1</version>
  <description>Sample autohyu_msgs for debugging</description>
  
  <maintainer email="ssdkswogns@hanyang.ac.kr">jaehoon</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  
  <export>
  <build_type>catkin</build_type>
  </export>
</package>